[project]
name = "harvest-pie"
version = "0.1.0"
description = "CLI pie chart of hours worked vs scheduled from Harvest"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "requests>=2.32.5",
    "term-piechart>=0.1.3",
]

[project.scripts]
harvest-pie = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
